crates/otter-runtime/tests/compile_fail/tokio_spawn_frame_is_not_send.stderr
error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(frame);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*mut otter_vm::Value`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(frame);
  |                              ^^^^^ has type `Option<Frame>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(frame);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `{async block@$DIR/tests/compile_fail/tokio_spawn_frame_is_not_send.rs:6:18: 6:28}`, the trait `Send` is not implemented for `*const ()`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(frame);
  |                              ^^^^^ has type `Option<Frame>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`

error: future cannot be sent between threads safely
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:6:5
  |
6 | /     tokio::spawn(async move {
7 | |         tokio::time::sleep(std::time::Duration::from_millis(1)).await;
8 | |         std::hint::black_box(frame);
9 | |     });
  | |______^ future created by async block is not `Send`
  |
  = help: within `[otter_gc::compressed::Gc<UpvalueCellBody>]`, the trait `Send` is not implemented for `*const UpvalueCellBody`
note: captured value is not `Send`
 --> tests/compile_fail/tokio_spawn_frame_is_not_send.rs:8:30
  |
8 |         std::hint::black_box(frame);
  |                              ^^^^^ has type `Option<Frame>` which is not `Send`
note: required by a bound in `tokio::spawn`
 --> $CARGO/tokio-$VERSION/src/task/spawn.rs
  |
  |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
  |            ----- required by a bound in this function
  |     where
  |         F: Future + Send + 'static,
  |                     ^^^^ required by this bound in `spawn`
